--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ env:
 
 jobs:
   test:
+    #environment: testing
     env:
       MONGODB_CLUSTER_ADDRESS: cluster_address
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
@@ -28,8 +29,7 @@ jobs:
         run: npm ci
       - name: Run server
         run: 
-          echo "start & npw wait-on http://127.0.0.1:$PORT"
-          #npm start & npx wait-on http://127.0.0.1:$PORT
+          npm start & npx wait-on http://127.0.0.1:$PORT
       - name: Run tests
         run: npm test
       - name: Output information
