added port as manual

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm ci
       - name: Run server
         run: 
-          npm start & npx wait-on http://127.0.0.1:$PORT
+          npm start & npx wait-on http://127.0.0.1:8080
       - name: Run tests
         run: npm test
       - name: Output information
