--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run server
-        run: 
-          npm start & npx wait-on http://127.0.0.1:8080
+        run: npm start & npx wait-on http://127.0.0.1:8080
       - name: Run tests
         run: npm test
       - name: Output information
