--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:8080
+        run: npx wait-on http://127.0.0.1:8080 & npm start
       - name: Run tests
         run: npm test
       - name: Output information
