--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,8 @@ jobs:
           key: npm-deps-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
-      - name: Run npm start
-        run: npm start 
       - name: Run server
-        run: npx wait-on http://127.0.0.1:8080
+        run: npm start & npx wait-on http://127.0.0.1:8080
       - name: Run tests
         run: npm test
       - name: Output information
