get informations from secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,10 @@ jobs:
   test:
     #environment: testing
     env:
-      MONGODB_CLUSTER_ADDRESS: cluster0.mwklbdp.mongodb.net
-      MONGODB_USERNAME: yigitkarabiyik8
-      MONGODB_PASSWORD: ryP2jYYY8XOKu10F
-      PORT: 8080
+      MONGODB_CLUSTER_ADDRESS: ${{secrets.MONGODB_CLUSTER_ADDRESS}}
+      MONGODB_USERNAME: ${{secrets.MONGODB_USERNAME}}
+      MONGODB_PASSWORD: ${{secrets.MONGODB_PASSWORD}}
+      PORT: ${{secrets.PORT}}
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:8080
+        run: npm start & npx wait-on http://127.0.0.1:${{secrets.PORT}}
       - name: Run tests
         run: npm test
       - name: Output information
