get info from secrets environment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   test:
-    #environment: testing
+    environment: testing
     env:
       MONGODB_CLUSTER_ADDRESS: ${{secrets.MONGODB_CLUSTER_ADDRESS}}
       MONGODB_USERNAME: ${{secrets.MONGODB_USERNAME}}
